파일명 수정 : 페이지 오류

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>1만 시간의 법칙</title>
         <link rel="stylesheet" href="./css/reset.css" />
-        <link rel="stylesheet" href="./css/10000hours.css" />
+        <link rel="stylesheet" href="./css/styles.css" />
     </head>
     <!-- bem 네이밍도 같이 연습-->
     <body>
@@ -79,9 +79,9 @@
                 당신의 꿈을 응원합니다.
             </p>
             <img src="./img/licat.png" alt="" />
-            <a class="btn--submit btn__anchor-go"
-                >종료하고 진짜 훈련하러 가기 GO!GO!</a
-            >
+            <a class="btn--submit btn__anchor-go">
+                종료하고 진짜 훈련하러 가기 GO!GO!
+            </a>
         </section>
     </body>
 </html>
