모달 부분 미디어쿼리 추가

--- a/index.html
+++ b/index.html
@@ -60,11 +60,12 @@
             <div class="box-licat">
                 <h2 class="blind">응원 모달</h2>
                 <p class="modal-licat__text">
-                    <strong>화이팅!!♥♥♥</strong><br />
+                    <strong>화이팅!!<span>♥♥♥</span></strong
+                    ><br />
                     당신의 꿈을 응원합니다.
                 </p>
                 <img src="./img/licat.png" alt="" />
-                <a class="btn--submit btn__anchor-go"> 종료하고 진짜 훈련하러 가기 GO!GO! </a>
+                <a class="btn--submit btn__anchor-go"> 종료하고 진짜 <span></span> 훈련하러 가기 GO!GO! </a>
             </div>
         </section>
     </body>
