--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="./css/styles.css" />
     </head>
     <!-- bem 네이밍도 같이 연습-->
-    <body>
+    <body class="wrapper">
         <!-- 1만 시간의 법칙 로고와 정의 부분 -->
         <header class="title">
             <h1>
@@ -57,8 +57,8 @@
         </footer>
         <!-- 모달 구현 필요 -->
         <section class="modal-licat">
+            <h2 class="blind">응원 모달</h2>
             <div class="box-licat">
-                <h2 class="blind">응원 모달</h2>
                 <p class="modal-licat__text">
                     <strong>화이팅!!<span>♥♥♥</span></strong
                     ><br />
