불필요한 클래스 삭제

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="./css/styles.css" />
     </head>
     <!-- bem 네이밍도 같이 연습-->
-    <body class="wrapper">
+    <body>
         <!-- 1만 시간의 법칙 로고와 정의 부분 -->
         <header class="title">
             <h1>
