--- a/index.html
+++ b/index.html
@@ -26,26 +26,30 @@
                 최소한 1만 시간의 훈련이 필요하다는 법칙이다.
             </p>
             <form id="box-input">
-                <p class="cal__text--input">
-                    나는
-                    <input type="text" placeholder="예)프로그래밍" required />
-                    전문가가 될 것이다. <br />
-                    그래서 앞으로 매일 하루에
-                    <input type="text" placeholder="예)5시간" required />
-                    시간씩 훈련할 것이다.
-                </p>
-                <button class="btn--submit btn--submit-result">나는 며칠 동안 훈련을 해야 1만 시간이 될까?</button>
-                <img class="cal__img--click" src="./img/click.png" alt="" />
+                <fieldset>
+                    <legend class="blind">시간 입력</legend>
+                    <p class="cal__text--input">
+                        나는
+                        <input type="text" placeholder="예)프로그래밍" required />
+                        전문가가 될 것이다. <br />
+                        그래서 앞으로 매일 하루에
+                        <input type="number" placeholder="예)5시간" required />
+                        시간씩 훈련할 것이다.
+                    </p>
+                    <button class="btn btn-result">나는 며칠 동안 훈련을 해야 1만 시간이 될까?</button>
+                    <img class="cal__img--click" src="./img/click.png" alt="" />
+                </fieldset>
             </form>
-            <section>
+            <img class="loading" src="./img/loading.png" alt="" />
+            <section class="result">
                 <h3 class="blind">결과 확인</h3>
                 <p class="cal__text--output">
                     당신은
                     <strong>프로그래밍</strong> 전문가가 되기 위해서
                 </p>
                 <p class="cal__text--output">대략 <strong>5110</strong>일 이상 훈려하셔야 됩니다! :)</p>
-                <button class="btn--submit btn--anchor-modal">훈련하러 가기 GO!GO!</button>
-                <a class="btn--submit btn--anchor-share" href="">공유하기</a>
+                <button class="btn btn-modal">훈련하러 가기 GO!GO!</button>
+                <button class="btn btn-share" href="">공유하기</button>
             </section>
         </main>
         <footer class="copyright">
@@ -65,8 +69,9 @@
                     당신의 꿈을 응원합니다.
                 </p>
                 <img src="./img/licat.png" alt="" />
-                <a class="btn--submit btn__anchor-go"> 종료하고 진짜 <span></span> 훈련하러 가기 GO!GO! </a>
+                <button id="test" type="button" class="btn btn-go">종료하고 진짜 <span></span> 훈련하러 가기 GO!GO!</button>
             </div>
         </section>
+        <script src="./js/10000hours.js"></script>
     </body>
 </html>
