--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                 <h3 class="blind">결과 확인</h3>
                 <p class="cal__text--output">
                     당신은
-                    <strong>프로그래밍</strong> 전문가가 되기 위해서
+                    <strong class="strong-result">프로그래밍</strong> 전문가가 되기 위해서
                 </p>
-                <p class="cal__text--output">대략 <strong>5110</strong>일 이상 훈려하셔야 됩니다! :)</p>
+                <p class="cal__text--output">대략 <strong class="strong-result">5110</strong>일 이상 훈려하셔야 됩니다! :)</p>
                 <button class="btn btn-modal">훈련하러 가기 GO!GO!</button>
                 <button class="btn btn-share" href="">공유하기</button>
             </section>
