--- a/index.html
+++ b/index.html
@@ -1,77 +1,79 @@
 <!DOCTYPE html>
 <html lang="ko">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>1만 시간의 법칙</title>
-        <link rel="stylesheet" href="./css/reset.css" />
-        <link rel="stylesheet" href="./css/styles.css" />
-    </head>
-    <!-- bem 네이밍도 같이 연습-->
-    <body>
-        <!-- 1만 시간의 법칙 로고와 정의 부분 -->
-        <header class="title">
-            <h1>
-                <img class="title__img-letter" src="./img/title.png" alt="1만 시간의 법칙" />
-            </h1>
-            <p class="title__text">"연습은 어제의 당신보다 당신을 더 낫게 만든다"</p>
-        </header>
-        <!-- 훈련 시간 보여주는 부분-->
-        <main class="cal">
-            <h2 class="blind">훈련 시간 계산기</h2>
-            <p class="cal__text">
-                <strong>1만 시간의 법칙</strong>은 <br />
-                어떤 분야의 전문가가 되기 위해서는<br />
-                최소한 1만 시간의 훈련이 필요하다는 법칙이다.
-            </p>
-            <form id="box-input">
-                <fieldset>
-                    <legend class="blind">시간 입력</legend>
-                    <p class="cal__text--input">
-                        나는
-                        <input type="text" placeholder="예)프로그래밍" required />
-                        전문가가 될 것이다. <br />
-                        그래서 앞으로 매일 하루에
-                        <input type="number" placeholder="예)5시간" required />
-                        시간씩 훈련할 것이다.
-                    </p>
-                    <button class="btn btn-result">나는 며칠 동안 훈련을 해야 1만 시간이 될까?</button>
-                    <img class="cal__img--click" src="./img/click.png" alt="" />
-                </fieldset>
-            </form>
-            <img class="loading" src="./img/loading.png" alt="" />
-            <section class="result">
-                <h3 class="blind">결과 확인</h3>
-                <p class="cal__text--output">
-                    당신은
-                    <strong class="strong-result">프로그래밍</strong> 전문가가 되기 위해서
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>1만 시간의 법칙</title>
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/styles.css">
+</head>
+<!-- bem 네이밍도 같이 연습-->
+
+<body>
+    <!-- 1만 시간의 법칙 로고와 정의 부분 -->
+    <header class="title">
+        <h1>
+            <img class="img-title" src="./img/title.png" alt="1만 시간의 법칙">
+        </h1>
+        <p class="text-title">"연습은 어제의 당신보다 당신을 더 낫게 만든다"</p>
+    </header>
+    <!-- 훈련 시간 보여주는 부분-->
+    <main class="calc">
+        <h2 class="blind">훈련 시간 계산기</h2>
+        <p class="text-desc">
+            <strong>1만 시간의 법칙</strong>은 <br>
+            어떤 분야의 전문가가 되기 위해서는<br>
+            최소한 1만 시간의 훈련이 필요하다는 법칙이다.
+        </p>
+        <form id="box-input">
+            <fieldset>
+                <legend class="blind">시간 입력</legend>
+                <p class="text-input">
+                    나는
+                    <input type="text" placeholder="예)프로그래밍" required>
+                    전문가가 될 것이다. <br>
+                    그래서 앞으로 매일 하루에
+                    <input type="number" placeholder="예)5시간" required>
+                    시간씩 훈련할 것이다.
                 </p>
-                <p class="cal__text--output">대략 <strong class="strong-result">5110</strong>일 이상 훈려하셔야 됩니다! :)</p>
-                <button class="btn btn-modal">훈련하러 가기 GO!GO!</button>
-                <button class="btn btn-share" href="">공유하기</button>
-            </section>
-        </main>
-        <footer class="copyright">
-            <img class="copyright__logo" src="./img/logo.png" alt="주식회사 위니브" />
-            <p>
-                ※ 본 서비스 내 이미지 및 콘텐츠의 저작권은 주식회사 WeNiv에 있습니다.<br />
-                수정 및 재배포, 무단 도용 시 법적인 문제가 발생할 수 있습니다.
+                <button class="btn btn-result" type="button">나는 며칠 동안 훈련을 해야 1만 시간이 될까?</button>
+                <img class="img-click" src="./img/click.png" alt="">
+            </fieldset>
+        </form>
+        <img class="loading" src="./img/loading.png" alt="">
+        <section class="result">
+            <h3 class="blind">결과 확인</h3>
+            <p class="text-output">
+                당신은
+                <strong class="strong-result">프로그래밍</strong> 전문가가 되기 위해서
             </p>
-        </footer>
-        <!-- 모달 구현 필요 -->
-        <section class="modal-licat">
-            <h2 class="blind">응원 모달</h2>
-            <div class="box-licat">
-                <p class="modal-licat__text">
-                    <strong>화이팅!!<span>♥♥♥</span></strong
-                    ><br />
-                    당신의 꿈을 응원합니다.
-                </p>
-                <img src="./img/licat.png" alt="" />
-                <button id="test" type="button" class="btn btn-go">종료하고 진짜 <span></span> 훈련하러 가기 GO!GO!</button>
-            </div>
+            <p class="text-output">대략 <strong class="strong-result">5110</strong>일 이상 훈려하셔야 됩니다! :)</p>
+            <button class="btn btn-modal" type="button">훈련하러 가기 GO!GO!</button>
+            <button class="btn btn-share" type="button">공유하기</button>
         </section>
-        <script src="./js/10000hours.js"></script>
-    </body>
+    </main>
+    <footer class="copyright">
+        <img class="img-logo" src="./img/logo.png" alt="주식회사 위니브">
+        <p>
+            ※ 본 서비스 내 이미지 및 콘텐츠의 저작권은 주식회사 WeNiv에 있습니다.<br>
+            수정 및 재배포, 무단 도용 시 법적인 문제가 발생할 수 있습니다.
+        </p>
+    </footer>
+    <!-- 모달 구현 필요 -->
+    <section class="modal-licat">
+        <h2 class="blind">응원 모달</h2>
+        <div class="box-licat">
+            <p class="text-modal">
+                <strong>화이팅!!<span>♥♥♥</span></strong><br>
+                당신의 꿈을 응원합니다.
+            </p>
+            <img src="./img/licat.png" alt="">
+            <button id="test" type="button" class="btn btn-go">종료하고 진짜 <span></span> 훈련하러 가기 GO!GO!</button>
+        </div>
+    </section>
+    <script src="./js/10000hours.js"></script>
+</body>
+
 </html>
